{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 91,
  "lineage": "1826da22-25a7-2de6-fb5a-bac0c97c1c35",
  "resources": [
    {
      "module": "module.ec2_instance[\"dhani\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:subnet/subnet-0487a854d641fc9c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0487a854d641fc9c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304182266883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "vpc_id": "vpc-0d544c7f3e56b3d5e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"dhani\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:304182266883:instance/i-0e75ccb454fbb192a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e75ccb454fbb192a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "queen",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05dee58ebcfb8a248"
              }
            ],
            "primary_network_interface_id": "eni-05dee58ebcfb8a248",
            "private_dns": "ip-172-31-27-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.112",
            "public_dns": "ec2-54-242-13-211.compute-1.amazonaws.com",
            "public_ip": "54.242.13.211",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bb95fb3f83e22243",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "instance-dhani-20260130012401391400000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0487a854d641fc9c7",
            "tags": {
              "Env": "dev",
              "Name": "instance-dhani",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "instance-dhani",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Env": "dev",
              "Name": "instance-dhani",
              "Terraform": "true"
            },
            "vpc_security_group_ids": [
              "sg-0fd099aa3db91b3e8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "i-0e75ccb454fbb192a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"dhani\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:security-group/sg-0fd099aa3db91b3e8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fd099aa3db91b3e8",
            "ingress": [],
            "name": "instance-dhani-20260130012401391400000002",
            "name_prefix": "instance-dhani-",
            "owner_id": "304182266883",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "instance-dhani",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "instance-dhani",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d544c7f3e56b3d5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "sg-0fd099aa3db91b3e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2_instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"dhani\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:security-group-rule/sgr-0f46047093ff85313",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0f46047093ff85313",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fd099aa3db91b3e8",
            "security_group_rule_id": "sgr-0f46047093ff85313",
            "tags": {
              "Env": "dev",
              "Name": "instance-dhani-ipv4_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "instance-dhani-ipv4_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "sgr-0f46047093ff85313",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:security-group-rule/sgr-06362e39a52422aeb",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-06362e39a52422aeb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fd099aa3db91b3e8",
            "security_group_rule_id": "sgr-06362e39a52422aeb",
            "tags": {
              "Env": "dev",
              "Name": "instance-dhani-ipv6_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "instance-dhani-ipv6_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "sgr-06362e39a52422aeb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"manju\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:subnet/subnet-0487a854d641fc9c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0487a854d641fc9c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304182266883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "vpc_id": "vpc-0d544c7f3e56b3d5e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"manju\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:304182266883:instance/i-0c78ba5cf0550a591",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c78ba5cf0550a591",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "queen",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e32f318e91304126"
              }
            ],
            "primary_network_interface_id": "eni-0e32f318e91304126",
            "private_dns": "ip-172-31-23-160.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.160",
            "public_dns": "ec2-100-53-134-106.compute-1.amazonaws.com",
            "public_ip": "100.53.134.106",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b429df30a207bbda",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "instance-manju-20260130012401390300000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0487a854d641fc9c7",
            "tags": {
              "Env": "dev",
              "Name": "instance-manju",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "instance-manju",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Env": "dev",
              "Name": "instance-manju",
              "Terraform": "true"
            },
            "vpc_security_group_ids": [
              "sg-0568f6450d0931593"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "i-0c78ba5cf0550a591",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"manju\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:security-group/sg-0568f6450d0931593",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0568f6450d0931593",
            "ingress": [],
            "name": "instance-manju-20260130012401390300000001",
            "name_prefix": "instance-manju-",
            "owner_id": "304182266883",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "instance-manju",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "instance-manju",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d544c7f3e56b3d5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "sg-0568f6450d0931593",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2_instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"manju\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:security-group-rule/sgr-0cf7f026ced09f7aa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0cf7f026ced09f7aa",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0568f6450d0931593",
            "security_group_rule_id": "sgr-0cf7f026ced09f7aa",
            "tags": {
              "Env": "dev",
              "Name": "instance-manju-ipv4_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "instance-manju-ipv4_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "sgr-0cf7f026ced09f7aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304182266883:security-group-rule/sgr-0f6f6e67916556767",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0f6f6e67916556767",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0568f6450d0931593",
            "security_group_rule_id": "sgr-0f6f6e67916556767",
            "tags": {
              "Env": "dev",
              "Name": "instance-manju-ipv6_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "instance-manju-ipv6_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304182266883",
            "id": "sgr-0f6f6e67916556767",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}